# SegAndDiffuse

./: .gitignore  README.md  main.py  pyproject.toml
_.github/workflows/: pytest_gitgist.yaml
code/: builders.py  data.py  tools.py
